[package]
name = "googauth"
version = "0.4.0"
authors = ["Erik Zivkovic"]
edition = "2018"

[dependencies]
openidconnect = "1.1.1"
env_logger = "0.5"
failure = "0.1"
base64 = "0.9"
rand = "0.6"
url = "1.0"
serde = "1"
serde_json = "1"
serde_derive = "1"
dirs = "2.0.1"
simple-error = "0.2.1"
clap = "2.33.0"
webbrowser = "0.5.1"

[profile.release]
lto = true
codegen-units = 1
