[package]
name = "googauth-lib"
version = "0.6.0"
authors = ["Erik Zivkovic <erik@zivkovic.se>"]
edition = "2018"
license = "MIT"
description = "A library that uses OpenID Connect to sign in to a Google account, and store the credentials locally for ease of use"
homepage = "https://github.com/bes/googauth"
repository = "https://github.com/bes/googauth"
documentation = "https://docs.rs/googauth-lib"
readme = "README.md"

[dependencies]
openidconnect = "1.1.1"
thiserror = "1"
base64 = "0.9"
rand = "0.6"
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "2"
clap = "2"
webbrowser = "0.5.1"
