[package]
name = "googauth-lib"
version = "0.7.0"
authors = ["Erik Zivkovic <erik@zivkovic.se>"]
edition = "2018"
license = "MIT"
description = "A library that uses OpenID Connect to sign in to a Google account, and store the credentials locally for ease of use"
homepage = "https://github.com/bes/googauth"
repository = "https://github.com/bes/googauth"
documentation = "https://docs.rs/googauth-lib"
readme = "README.md"

[dependencies]
openidconnect = { version = "2.1.1", features = ["rustls-tls", "reqwest"], default-features = false }
thiserror = "1"
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "3"
clap = "2"
webbrowser = "0.5.5"
