[package]
name = "googauth"
version = "0.8.1-pre"
authors = ["Erik Zivkovic <erik@zivkovic.se>"]
edition = "2018"
license = "MIT"
description = "An application that uses OpenID Connect to sign in to a Google account, and store the credentials locally for ease of use"
homepage = "https://github.com/bes/googauth"
repository = "https://github.com/bes/googauth"
readme = "README.md"

[dependencies]
googauth-lib = { path = "../googauth-lib", version = "0.8.1-pre" }
clap = "2"
tokio = { version = "1", features = ["full"] }
